src/index.css
/* Add Poppins font from google*/
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/**
 * ============================================================================
 * Setting global variables
 * ============================================================================
 */

:root {
  --color-red: rgba(152, 38, 53, 1.0);
  --color-red-transparent: rgba(152, 38, 53, 0.975);
  --color-red-light: rgba(227, 145, 156, 1.0);
  --color-red-lighter: rgb(226, 225, 225);
  --color-error: rgba(255, 80, 61, 1.0);
  --color-error-light: rgba(255, 149, 138, 1.0);
  --color-black: rgba(0, 0, 0, 1.0);
  --color-black-alpha-003: rgba(0, 0, 0, 0.03);
  --color-black-alpha-005: rgba(0, 0, 0, 0.05);
  --color-black-alpha-010: rgba(0, 0, 0, 0.10);
  --color-black-alpha-015: rgba(0, 0, 0, 0.15);
  --color-black-alpha-020: rgba(0, 0, 0, 0.20);
  --color-black-alpha-030: rgba(0, 0, 0, 0.30);
  --color-black-alpha-035: rgba(0, 0, 0, 0.35);
  --color-black-alpha-040: rgba(0, 0, 0, 0.40);
  --color-black-alpha-050: rgba(0, 0, 0, 0.50);
  --color-black-alpha-060: rgba(0, 0, 0, 0.60);
  --color-black-alpha-070: rgba(0, 0, 0, 0.70);
  --color-black-alpha-080: rgba(0, 0, 0, 0.80);
  --color-grey: rgba(175, 175, 175, 1.0);
  --color-grey-lighter: rgb(215, 215, 215);
  --color-box-shadow: var(--color-black-alpha-015);
  --color-box-shadow-dark: var(--color-black-alpha-035);
  --color-transparent: rgba(0, 0, 0, 0);
  --color-white-alpha-010: rgba(255, 255, 255, 0.10);
  --color-white-alpha-020: rgba(255, 255, 255, 0.20);
  --color-white-alpha-030: rgba(255, 255, 255, 0.30);
  --color-white-alpha-040: rgba(255, 255, 255, 0.40);
  --color-white-alpha-050: rgba(255, 255, 255, 0.50);
  --color-white-alpha-060: rgba(255, 255, 255, 0.60);
  --color-white-alpha-070: rgba(255, 255, 255, 0.70);
  --color-white-alpha-080: rgba(255, 255, 255, 0.80);
  --color-white-alpha-090: rgba(255, 255, 255, 0.90);
  --color-facebook: rgba(59, 89, 152, 1.0);
  --color-linkedin: rgba(1, 119, 181, 1.0);
  --color-twitter: rgba(0, 172, 237, 1.0);
  --color-instagram: rgba(251, 57, 88, 1.0);
  --color-medium: rgba(26, 167, 125, 1.0);
  --screen-xs: 600px;
  --screen-sm: 768px;
  --screen-md: 992px;
  --screen-lg: 1200px;
  --z-index-level-ceil: 1000; /* highest level for HTML elements */
  --z-index-level-1st: 900; /* use this for the menu in sizeXs */
  --z-index-level-2nd: 800; /* use this for modals */
  --z-index-level-3rd: 700;
  --z-index-level-4th: 600;
  --z-index-level-5th: 500;
  --z-index-level-ground: 0; /* lowest level for HTML elements */
}

/**
 * ============================================================================
 * Changes affecting the entire website
 * ============================================================================
 **/


* {
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
  transition: all 0.3s;
}

body {
  margin: 0;
  line-height: 1.5;
}

div {
  -webkit-tap-highlight-color: transparent;
}

a {
  text-decoration: none;
  background-color: transparent;
}

.app-container {
  width: 100vw;
  min-height: 100vh;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.no-scroll {
  overflow: hidden;
  touch-action: none;
  -ms-touch-action: none;
}

.main-container {
  min-width: 100%;
  max-width: 100%;
  display: block;
  margin: 0 auto;
}

/**
 * ============================================================================
 * Editing the Page Body
 * ============================================================================
 * */

 .page-container {
  display: flex;
  flex-grow: 1;
  text-align: center;
  background-color: var(--color-grey-lighter);
  z-index: var(--z-index-level-ground);
}

.page-loading {
  overflow: hidden;
}

.page-content {
  background-color: white;
  max-width: 77.5%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  flex-grow: 1;
  margin: 0 auto;
  padding: 1rem 2rem;
  -webkit-box-shadow: 0 0 0.4rem var(--color-box-shadow-dark);
  -moz-box-shadow: 0 0 0.4rem var(--color-box-shadow-dark);
  box-shadow: 0 0 0.4rem var(--color-box-shadow-dark);
  border-left: 2px solid var(--color-box-shadow-dark);
  border-right: 2px solid var(--color-box-shadow-dark);
}


.page-content a, .page-content a:link, .page-content a:visited {
  color: var(--color-red-light);
  font-weight: 700;
}

.page-content a:hover {
  text-decoration: underline;
}

.image-soft-edges {
  display: flex;
  align-items: center;
  position: relative;
  justify-content: center;
  margin: 0.75rem auto 1.75rem auto;
}

.image-soft-edges::before {
  display:block;
  content:'';
  position:absolute;
  height:100%;
  -moz-box-shadow: inset 0px 0px 4px 4px rgba(255,255,255,1);
  -webkit-box-shadow: inset 0px 0px 4px 4px rgba(255,255,255,1);
  box-shadow: inset 0px 0px 4px 4px rgba(255,255,255,1);
  transition: all 0.3s;
}

.image-soft-edges:hover {
  -webkit-box-shadow: 0 0 0.4rem var(--color-box-shadow-dark);
  -moz-box-shadow: 0 0 0.4rem var(--color-box-shadow-dark);
  box-shadow: 0 0 0.4rem var(--color-box-shadow-dark);
}

.image-soft-edges:hover::before {
  box-shadow: none;
}

.page-content img {
  display: block;
  width: 100%;
}

.page-content .body-big-text {
  font-size: 2.5rem;
  font-weight: 100;
  background-color: var(--color-black-alpha-005);
  border-left: 1.5rem solid var(--color-black-alpha-020);
  border-right: 1.5rem solid var(--color-black-alpha-020);
}

/* the following affects everything, but we treat it as mainly affecting the page body */

h1, h2, h3, h4, h5, h6 {
  margin-bottom: 0;
  padding-bottom: 0.375rem;
}

p {
  margin-top: 0.5rem;
  font-size: 1.1rem;
}

h1, h2, h3, h4 {
  font-weight: 700;
}

h1, h2 {
  border-bottom: solid 5px var(--color-black-alpha-005);
}

h1 {
  font-size: 1.7rem;
}

h2 {
  font-size: 1.6rem;
}

h3 {
  font-size: 1.5rem;
  text-decoration: underline;
}

h4 {
  font-size: 1.4rem;
}

h5 {
  font-size: 1.3rem;
  font-style: oblique;
}

h6 {
  font-size: 1.25rem;
}

.page-content span {
  font-size: 0.95rem;
}

.page-content div, .page-content {
  font-size: 1.1rem;
}

@media (max-width: 599px) {
  .page-content {
    max-width: 100%;
    padding: 1rem 1.5rem;
  }
}

@media (min-width: 400px) {
  .page-content span {
    font-size: 1rem;
  }

  h1 {
    font-size: 1.80rem;
  }

  h2 {
    font-size: 1.70rem;
  }

  h3 {
    font-size: 1.60rem;
  }

  h4 {
    font-size: 1.50rem;
  }

  h5 {
    font-size: 1.40rem;
  }
}

@media (min-width: 500px) {
  .page-content span {
    font-size: 1.1rem;
  }

  h1 {
    font-size: 1.90rem;
  }

  h2 {
    font-size: 1.80rem;
  }

  h3 {
    font-size: 1.70rem;
  }

  h4 {
    font-size: 1.60rem;
  }

  h5 {
    font-size: 1.50rem;
  }
}

@media (min-width: 600px) and (max-width: 767px) {
  .page-content {
    max-width: 87.5%;
  }

  .page-content .body-big-text {
    font-size: 3.0rem;
  }

  h1 {
    font-size: 2.00rem;
  }

  h2 {
    font-size: 1.90rem;
  }

  h3 {
    font-size: 1.80rem;
  }

  h4 {
    font-size: 1.70rem;
  }

  h5 {
    font-size: 1.60rem;
  }
}

@media (min-width: 768px) {
  p, .page-content span, .page-content div, .page-content {
    font-size: 1.25rem;
  }

  .page-content .body-big-text {
    font-size: 3.5rem;
  }
}

@media (min-width: 992px) {
  h1 {
    font-size: 2.25rem;
  }

  h2 {
    font-size: 2.10rem;
  }

  h3 {
    font-size: 1.80rem;
  }

  .page-content .body-big-text {
    font-size: 4.0rem;
  }
}

@media (min-width: 768px) and (max-width: 1199px) {
  .page-content {
    max-width: 82.5%;
  }
}

@media (min-width: 1200px) {
  h3 {
    font-size: 1.95rem;
  }

  .page-content .body-big-text {
    font-size: 4.5rem;
  }
}

@media (min-width: 1200px) and (max-width: 1499px) {
  .page-content {
    max-width: 70%;
  }
}

@media (min-width: 1500px) {
  .page-content {
    max-width: 55%;
  }
}

@media (hover: none) {
  .page-content a {
    text-decoration: underline;
  }
}

